--- a/src/app/Page.module.css
+++ b/src/app/Page.module.css
@@ -1,17 +1,9 @@
 .App {
   text-align: center;
-  font-size: 1em;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-}
 
-.themeButton {
-  margin-top: 20px;
-  width: 100px;
-  height: 50px;
-  border-radius: 5px;
-  border: none;
 }
 
 .darkMode {
@@ -23,7 +15,7 @@
   background-color: rgb(240, 235, 240);
   color: rgb(70, 70, 70);
 }
-
+/* 
 .darkMode:hover {
   background-color: rgb(70, 72, 70);
 }
@@ -31,4 +23,4 @@
 .lightMode:hover {
   background-color: rgb(220, 215, 220);
 }
-
+ */
