--- a/src/app/components/UI/AddExpens.module.css
+++ b/src/app/components/UI/AddExpens.module.css
@@ -6,6 +6,7 @@
     text-align: left;
     max-width: 800px;
     box-sizing: border-box;
+    margin-top: 20px;
   }
   
   .expens {
@@ -62,8 +63,6 @@
     background-color: #45a049;
   }
 
-  
-
   .darkMode {
     background-color: rgb(50, 52, 50);
     color: whitesmoke;  
@@ -73,4 +72,5 @@
     background-color: rgb(240, 235, 240);
     color: rgb(70, 70, 70);
   }
+  
   
