--- a/src/app/components/UI/Expens.module.css
+++ b/src/app/components/UI/Expens.module.css
@@ -1,17 +1,32 @@
 .App {
     text-align: center;
-    font-size: 1em;
+    /* font-size: 1em; */
     width: 80%;
     margin-left: auto;
     margin-right: auto;
   }
   
-  .themeButton {
-    margin-top: 20px;
-    width: 100px;
-    height: 50px;
+  .headOfForm {
+    max-width: 800px;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;    
+  }
+
+  .headOfFormText{
+    font-size: 2em;
+    margin-left: 20px;
+    font-style: bold;
+    
+  }
+
+  .themeButton{
+    width: 200px;
+    height: 80%;
     border-radius: 5px;
-    border: none;
+    border: 2px solid grey;
+    font-size: 1.5em;
   }
   
   .darkMode {
@@ -24,7 +39,13 @@
     color: rgb(70, 70, 70);
   }
   
-  .darkMode:hover {
+  .themeButton:hover {
+
+    background-color: grey;
+   
+  }
+
+  /* .darkMode:hover {
     background-color: rgb(70, 72, 70);
   }
   
@@ -32,4 +53,4 @@
     background-color: rgb(220, 215, 220);
   }
   
-  
+   */
