--- a/src/app/components/ServerComponents/ExchangeRatesFromAPI.module.css
+++ b/src/app/components/ServerComponents/ExchangeRatesFromAPI.module.css
@@ -1,5 +1,5 @@
 .currencyRatesContainer{
-    max-width: 800px;
+    /* max-width: 800px; */
     height: 50px;
     display: flex;
     justify-content: space-between;
