--- a/src/app/components/UI/CurrentExchange.module.css
+++ b/src/app/components/UI/CurrentExchange.module.css
@@ -1,15 +1,28 @@
 .currencyRatesContainer{
-    /* max-width: 800px; */
+    max-width: 800px;
+    width: 80%;
+    
+    margin-left: auto;
+    margin-right: auto;
+    
     height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-left: 10px;
     padding-right: 10px;
-    
-    margin-top: 20px;
 }
 
 .currencyRate{
     margin: 0px;
 }
+
+.darkMode {
+    background-color: rgb(50, 52, 50);
+    color: whitesmoke;  
+  }
+  
+  .lightMode {
+    background-color: rgb(240, 235, 240);
+    color: rgb(70, 70, 70);
+  }
